Initial complete version of Harvey's Blog – added main pages and structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog Site</title>
 </head>
 <body>
-    
+    <main>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <h1 class="name">Harvey's Blog</h1>
+            <a href="about.html">About Me</a>
+        </nav>
+
+        <!-- Blog Content Content -->
+        <article class="blog-post">
+            <h2 class="title">Intro</h2>
+            <p>My name is Harvey Punsalan. I am a web developer and this is my blog where I share my thoughts and experiences.</p>
+            <p>Currently, I am still a student at Mapua Malayan Digital College, pursuing a degree in BSIT Major in Software Development.</p>
+        </article>
+
+        <!-- Post -->
+         <article class="my-post">
+            <h2 class="introOfBlog">Blog Posts</h2>
+            <section class="intro">
+                <h3>Lorem, ipsum dolor.</h3>
+                <h4>Harvey Punsalan</h4>
+                <h4>Sep 3, 2025</h4>
+                <img src="http://pets-images.dev-apis.com/pets/dog25.jpg" alt="dog1" class="blog-image">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, est nobis aliquid libero, cum, cupiditate recusandae minus facere consequatur labore modi maiores a. Fuga doloremque possimus assumenda debitis eos iure.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut sequi repellat vero voluptatum ad quidem exercitationem hic voluptas ab, non facere beatae, cum error velit temporibus id deleniti quibusdam odio.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam officiis, cum reprehenderit adipisci laborum esse? Perspiciatis ea cum laboriosam porro!</p>
+            </section>
+
+            <section class="second">
+                <h3>Lorem, ipsum dolor.</h3>
+                <h4>Harvey Punsalan</h4>
+                <h4>Sep 2, 2025</h4>
+                <img src="http://pets-images.dev-apis.com/pets/dog26.jpg" alt="dog2" class="blog-image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestiae vero saepe, reiciendis voluptatibus numquam aliquid animi eveniet dicta ipsam! Accusantium exercitationem minima ducimus est! Tempore voluptates facere sed nostrum fugit ad, cupiditate consequuntur, ducimus commodi quaerat quia eaque ipsam.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, repellat cum voluptatem culpa unde fugiat autem distinctio, cupiditate magni eligendi omnis itaque ipsam nihil qui, nostrum accusantium! Laudantium, dolore corporis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, atque eius? Repellendus facilis ad recusandae, repudiandae, placeat nisi tempore doloremque similique nam reiciendis inventore a veritatis neque odio quidem expedita!</p>
+            </section>
+
+            <section class="second">
+                <h3>Lorem, ipsum dolor.</h3>
+                <h4>Harvey Punsalan</h4>
+                <h4>Sep 1, 2025</h4>
+                <img src="http://pets-images.dev-apis.com/pets/dog27.jpg" alt="dog3" class="blog-image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestiae vero saepe, reiciendis voluptatibus numquam aliquid animi eveniet dicta ipsam! Accusantium exercitationem minima ducimus est! Tempore voluptates facere sed nostrum fugit ad, cupiditate consequuntur, ducimus commodi quaerat quia eaque ipsam.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, repellat cum voluptatem culpa unde fugiat autem distinctio, cupiditate magni eligendi omnis itaque ipsam nihil qui, nostrum accusantium! Laudantium, dolore corporis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, atque eius? Repellendus facilis ad recusandae, repudiandae, placeat nisi tempore doloremque similique nam reiciendis inventore a veritatis neque odio quidem expedita!</p>
+            </section>
+
+            <section class="second">
+                <h3>Lorem, ipsum dolor.</h3>
+                <h4>Harvey Punsalan</h4>
+                <h4>Aug 31, 2025</h4>
+                <img src="http://pets-images.dev-apis.com/pets/dog28.jpg" alt="dog4" class="blog-image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestiae vero saepe, reiciendis voluptatibus numquam aliquid animi eveniet dicta ipsam! Accusantium exercitationem minima ducimus est! Tempore voluptates facere sed nostrum fugit ad, cupiditate consequuntur, ducimus commodi quaerat quia eaque ipsam.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, repellat cum voluptatem culpa unde fugiat autem distinctio, cupiditate magni eligendi omnis itaque ipsam nihil qui, nostrum accusantium! Laudantium, dolore corporis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, atque eius? Repellendus facilis ad recusandae, repudiandae, placeat nisi tempore doloremque similique nam reiciendis inventore a veritatis neque odio quidem expedita!</p>
+            </section>
+
+            <section class="second">
+                <h3>Lorem, ipsum dolor.</h3>
+                <h4>Harvey Punsalan</h4>
+                <h4>Aug 30, 2025</h4>
+                <img src="http://pets-images.dev-apis.com/pets/dog29.jpg" alt="dog5" class="blog-image">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum molestiae vero saepe, reiciendis voluptatibus numquam aliquid animi eveniet dicta ipsam! Accusantium exercitationem minima ducimus est! Tempore voluptates facere sed nostrum fugit ad, cupiditate consequuntur, ducimus commodi quaerat quia eaque ipsam.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, repellat cum voluptatem culpa unde fugiat autem distinctio, cupiditate magni eligendi omnis itaque ipsam nihil qui, nostrum accusantium! Laudantium, dolore corporis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, atque eius? Repellendus facilis ad recusandae, repudiandae, placeat nisi tempore doloremque similique nam reiciendis inventore a veritatis neque odio quidem expedita!</p>
+            </section>
+         </article>
+    </main>
 </body>
 </html>
